[package]
name = "pdftransform"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6.4"
mongodb = "2.3.1"
mongodb-gridfs = "0.2.2"
bson = { version = "2.5.0", features = ["chrono-0_4"] }
tokio = "1.24.2"
chrono = "0.4.23"
serde = "1.0.152"
serde_repr = "0.1.10"
reqwest = {version = "0.11.14", features = ["gzip", "deflate", "stream", "json"]}
futures = {version = "0.3.25"}
rand = "0.8.5"
pdfium-render = "0.7.27"
log = { version = "0.4.17", features = ["kv_unstable_std"] }
json_env_logger2 = {version = "0.2.1", features = ["iso-timestamps"] }
kv-log-macro = "1.0.7"
image = "0.24.5"
base64 = "0.21.0"
mime = "0.3.16"
tokio-util = "0.7.4"
tokio-stream = "0.1.11"
bytes = "1.3.0"
libc = "0.2.139"
libreoffice-rs = "0.3.2"
