[package]
name = "pdftransform"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6.11"
async-trait = "0.1.66"
mongodb = "2.4.0"
mongodb-gridfs = "0.2.4"
bson = { version = "2.6.0", features = ["chrono-0_4"] }
tokio = "1.26.0"
chrono = "0.4.24"
serde = { version = "1.0.156", features = ["derive"] }
serde_repr = "0.1.11"
reqwest = {version = "0.11.14", features = ["gzip", "deflate", "stream", "json"]}
futures = {version = "0.3.27"}
rand = "0.8.5"
pdfium-render = {version = "0.7.34", features = ["sync"]}
image = "0.24.5"
base64 = "0.21.0"
mime = "0.3.16"
tokio-util = "0.7.7"
tokio-stream = "0.1.12"
bytes = "1.4.0"
libc = "0.2.140"
wait-timeout = "0.2.0"
tower = { version = "0.4.13", features = ["timeout"] }
tower-http = { version = "0.4.0", features = ["trace"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["json"] }
