[package]
name = "common"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.31", features = ["serde"]}
serde = { version = "1.0.195", features = ["derive"] }
serde_repr = "0.1.18"
serde_json = "1.0.111"
async-trait = "0.1.77"
tokio = { version = "1.35.1", features = ["fs", "rt-multi-thread"]}
mime = "0.3.17"
tracing = "0.1.40"
futures = {version = "0.3.30"}
rand = "0.8.5"
base64 = "0.21.7"
tokio-util = "0.7.10"
tokio-stream = "0.1.14"
async-nats = { version = "0.33.0", features = ["server_2_10"]}
reqwest = {version = "0.11.23", default-features = false, features = ["gzip", "deflate", "stream", "json", "rustls-tls"]}
bytes = "1.5.0"
rust-s3 = { version = "0.33.0", default-features = false, features = ["with-tokio", "tokio-rustls-tls"]}
