[package]
name = "transform"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }
async-trait = "0.1.74"
tokio = { version = "1.33.0", features = ["rt-multi-thread"]}
reqwest = {version = "0.11.22", default-features = false, features = ["gzip", "deflate", "stream", "json", "rustls-tls"]}
pdfium-render = {version = "0.8.14", features = ["sync"]}
image = "0.24.7"
mime = "0.3.17"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.17", features = ["json"] }

[features]

static = ["pdfium-render/static", "pdfium-render/libc++"]
